# self-harm-triage-notes

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
configs/: base.yaml
notebooks/: 1a-harmonise-datasets.ipynb  1b-clean-eda-lvrh.ipynb  1b-clean-eda-rmh.ipynb  2-create-separate-datasets.ipynb  3a-learn-word-frequency-list.ipynb  3b-learn-spelling.ipynb  4-normalise-triage-notes.ipynb  5a-selfharm-classifier-adding-lvrh.ipynb  5a-selfharm-classifier-lvrh.ipynb  5a-selfharm-classifier-normalisation-ablation.ipynb  5a-selfharm-classifier.ipynb  6-generalisability.ipynb  js_dvergence_analysis.ipynb  sharp_analysis.ipynb  utils.py
notebooks/archived/: _documentation.ipynb  _extract-concepts.ipynb  _learn-common-bigrams.ipynb  _nlp-pipeline.ipynb  create-fake-data.ipynb  develop-customised-tokenizer.ipynb  ensemble-model.ipynb  inference.ipynb  lime.ipynb  make-predictions.ipynb  retrieve-mimic-vocab.ipynb  sandbox.ipynb  sandbox2.ipynb  sankey-plot.ipynb  train-word2vec-doc2vec.ipynb
self_harm_triage_notes/: config.py  custom_tokenizer.py  dataset.py  dataset_utils.py  dev.py  dev_utils.py  text.py  text_utils.py  viz.py  viz_utils.py
tests/: test_custom_tokenizer.py  test_dataset.py  test_dataset_utils.py  test_dev.py  test_dev_utils.py  test_text.py  test_text_utils.py  test_viz.py
